# columbia-divhacks-2022

./: Makefile  README.md  pyproject.toml
client/: Dockerfile  locations.js  package-lock.json  package.json
client/components/: Navbar.jsx  bottomCard.jsx  map.jsx  privateRoute.js
client/pages/: [place].jsx  _app.js  addLocation.js  dashboard.js  index.js  index.jsx  locations.js
client/pages/auth/: login.js  register.js
client/pages/main/: dashboard.js
client/styles/: globals.css
k8s/: README.md  client.yml  ingress.yml  server.yml
server/: Dockerfile  index.py  pyproject.toml
