[tool.poetry]
name = "hackathon-template"
version = "0.1.0"
description = ""
authors = ["Vincent Tiu <46623413+vincetiu8@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hackathon_template"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
