[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Vincent Tiu <46623413+vincetiu8@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
